--- a/stat.html
+++ b/stat.html
@@ -33,6 +33,42 @@
         <tbody>
 
 
+            <tr>
+                <td>1</td>
+                <td>Odilbek</td>
+                <td>+998770305782</td>
+                <td>1</td>
+                <td>00:00:05</td>
+            </tr>
+
+
+            <tr>
+                <td>2</td>
+                <td>Odilbek</td>
+                <td>+998770305782</td>
+                <td>0</td>
+                <td>00:00:05</td>
+            </tr>
+
+
+            <tr>
+                <td>3</td>
+                <td>Odilbek</td>
+                <td>+998770305782</td>
+                <td>0</td>
+                <td>00:00:07</td>
+            </tr>
+
+
+            <tr>
+                <td>4</td>
+                <td>Odilbek</td>
+                <td>+998770305782</td>
+                <td>0</td>
+                <td>00:00:03</td>
+            </tr>
+
+
         </tbody>
     </table>
 </body>
